prevent body scrolling on ios

--- a/client/main.css
+++ b/client/main.css
@@ -1,17 +1,19 @@
 /* CSS declarations go here */
 html {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
   
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #2a2f35, #918e82 100%);
+  background-color: #000000;
+  /* background-image: linear-gradient(to bottom, #2a2f35, #918e82 100%); */
   background-attachment: fixed;
 
+  overflow: hidden;
   height: inherit;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
